--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,9 @@ Markdown==3.2.2
 MarkupSafe==1.1.1
 matplotlib==3.3.0
 matplotlib-venn==0.11.5
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+# mkl-fft==1.1.0
+# mkl-random==1.1.1
+# mkl-service==2.3.0
 numpy==1.19.1
 oauthlib==3.1.0
 opt-einsum==3.3.0
