--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+pytest==6.0.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
