--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ bert-for-tf2==0.14.5
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+coverage==5.2.1
 cycler==0.10.0
 docutils==0.16
 filelock==3.0.12
